# flask_project_maktab_53

./: .flaskenv  .gitignore  README.rst  requirements.txt  setup.cfg
blog/: Test for pull request.txt  __init__.py  api.py  blog.py  create_category.py  db.py  user.py
blog/static/css/: base.css  category.css  modal-content.css  my_posts_content.css  register.css  show_posts.css  tags_for_insert_post.css
blog/static/img/: test.txt
blog/static/img/avatar/: avatar.jfif
blog/static/img/posts/: test.txt
blog/static/img/profiles/: test.txt
blog/static/js/: base_script.js  buttons_for_my_post.js  category.js  edit_profile.js  home.js  insert_post.js  login.js  new_category.js  register.js  search.js  select_tag.js  show_category_in_insert_post.js  show_category_in_nav.js  show_tag_recommendation.js  tags_for_edit_post.js  tags_for_insert_post.js
blog/templates/: base.html  edit_post_content.html  edit_profile_content.html  home_content.html  insert_post_content.html  my_posts_content.html  new_category_content.html  posts_by_category_content.html  posts_by_tag_content.html  profile_content.html  search_content.html
blog/templates/auth/: login_content.html  register_content.html
blog/templates/blog/: index.html
instance/: config.py
